--- a/css/style.css
+++ b/css/style.css
@@ -46,12 +46,30 @@
     padding-left: 60px;
 }
 
-.enlace-nav{
+.enlace-nav {
+    position: relative;
+    overflow: hidden;
+    display: inline-block;
     text-decoration: none;
-    color: black;
+    color: #333;
+    }
+.enlace-nav:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: -100%;
+    width: 100%;
+    height: 2.80px;
+    background: salmon;;
+    transition: left .8s;
+}
+.enlace-nav:hover:after {
+    left: 0;
 }
 
-
+.lista-nav :hover{
+    color: salmon;
+}
 
 .contenedor-imagen-logo{
     grid-column: 2/3;
