cambiando el padding de los enlaces del header

--- a/css/style.css
+++ b/css/style.css
@@ -491,7 +491,7 @@ table td {
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
     top: 0;
-    padding-left: 1px;
+    padding-right: 3px;
   }
 
   .cont-titulo {
