--- a/css/style.scss
+++ b/css/style.scss
@@ -306,6 +306,7 @@
     outline: none;
   }
   
+  
   .form-img {
     flex: 1;
     padding: 10px;
@@ -388,7 +389,7 @@
       font-size: 16px;
       font-family: Arial, Helvetica, sans-serif;
       top: 0;
-      padding-left: 1px;
+      padding-right: 3px;
     }
   
     .cont-titulo {
@@ -501,4 +502,4 @@
     .nosotros-acordeon {
       display: none;
     }
-  }
+ }
