--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,1 +1,8 @@
 $tipografia-titulo: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+$colores-fondo-map: (
+    'marron-claro': rgba(233, 216, 195, 0.9960784314),
+    'violetita': #a8428c,
+    'gris': rgba(225, 219, 219, 0.421),
+    'rosita': #EFDAD7
+)
