--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -1,10 +1,8 @@
-$fondo-footer: #a8428c;
 $tamano-enlace: 18px;
-
 
 .fin {
   grid-area: footer;
-  background-color: $fondo-footer;
+  background-color: map-get($map: $colores-fondo-map, $key: violetita );
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   height: 200px;
