--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 .cabezera {
   grid-area: header;
   background-color: rgba(233, 216, 195, 0.9960784314);
@@ -114,6 +108,12 @@
   font-family: Georgia, "Times New Roman", Times, serif;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .container-grid {
   display: grid;
   grid-template-areas: "header" "contenido" "footer";
@@ -128,17 +128,12 @@
 .cont-titulo {
   display: grid;
   grid-template-columns: auto auto;
-  justify-items: center;
   margin-bottom: 80px;
 }
 .cont-titulo h1 {
   position: relative;
   right: 200px;
-  font-size: 43px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   grid-column: 2/3;
-  display: flex;
-  align-items: center;
 }
 
 .imagenInicial {
@@ -172,19 +167,15 @@
 .contenedor-nosotros {
   background-color: rgba(225, 219, 219, 0.421);
   display: grid;
-  grid-template-areas: "titulo imagen" "contenido  imagen" " contenido imagen";
+  grid-template-areas: "titulo imagen" "contenido  imagen" "contenido imagen";
   margin-bottom: 60px;
   align-items: center;
 }
 
 #nosotros {
+  margin-top: 14px;
   grid-area: titulo;
-  display: flex;
-  justify-content: center;
-  padding-top: 30px;
   border-bottom: 3px solid black;
-  font-size: 40px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   letter-spacing: 2px;
 }
 
@@ -236,9 +227,9 @@
 }
 
 .contenedor-servicios {
-  display: inline-block;
-  position: relative;
+  position: absolute;
   left: 800px;
+  text-align: center;
 }
 
 .imagen-izquierda {
@@ -250,13 +241,11 @@
 }
 
 #servicios {
-  text-align: center;
   font-size: 40px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 #especialidades {
-  text-align: center;
   font-size: 20px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   margin-top: 15px;
@@ -265,27 +254,15 @@
 table {
   width: 700px;
   height: 400px;
-  margin-top: 10px;
-  border-collapse: collapse;
 }
-
-.color-tabla {
-  background-color: rgba(225, 219, 219, 0.421);
-}
-
 table td {
   border: solid rgba(215, 168, 110, 0.3764705882);
-  text-align: center;
   font-size: 20px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-#galeria {
-  text-align: center;
-  font-size: 40px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  padding: 20px 0;
-  font-weight: 400;
+.color-tabla {
+  background-color: rgba(225, 219, 219, 0.421);
 }
 
 .linea {
@@ -432,20 +409,24 @@ table td {
   padding: 12px;
 }
 
-#contactos {
-  text-align: center;
-  font-size: 40px;
+#contactos, .cont-titulo h1, #nosotros, #galeria {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 46px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   margin-bottom: 30px;
+  font-weight: 400;
 }
 
 .contenedor-conozcanos {
   display: flex;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  justify-content: center;
   padding: 50px 50px;
   background: rgba(225, 219, 219, 0.421);
+  margin-bottom: 40px;
 }
 
 .contenedor-mensaje-conozcanos {
@@ -575,21 +556,11 @@ table td {
     font-size: 13px;
   }
 
-  .contenedor-nosotros {
-    grid-template-areas: "titulo" "imagen" "contenido";
-    background-color: aliceblue;
-  }
-
   .imagen-nosotros {
     max-width: 100%;
     height: 250px;
     padding-right: 0;
     margin: auto;
-  }
-
-  #nosotros {
-    font-size: 35px;
-    margin-bottom: 30px;
   }
 
   .contenedor-info {
@@ -601,7 +572,26 @@ table td {
     font-size: 20px;
   }
 
+  #nosotros {
+    margin-top: 11px;
+    font-size: 30px;
+    padding-bottom: 10px;
+  }
+
+  .contenedor-nosotros {
+    grid-template-areas: "titulo" "imagen" "contenido";
+    background-color: aliceblue;
+  }
+
   .nosotros-acordeon {
     display: none;
+  }
+
+  #galeria {
+    font-size: 35px;
+  }
+
+  #contactos, .cont-titulo h1, #nosotros, #galeria {
+    font-size: 35px;
   }
 }/*# sourceMappingURL=style.css.map */
