--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,66 +1,68 @@
-$color-enlace: salmon;
+// Inicio de los estilos para los Headers".
+$color-enlace: #FF8D29;
 
 .cabezera {
-    grid-area: header;
-    background-color: map-get($map: $colores-fondo-map, $key: marron-claro);
-    height: 200px;
-    display: grid;
-    grid-template-columns: repeat(7, auto);
-    align-items: center;
-    margin-bottom: 80px;
+  grid-area: header;
+  background-color: map-get($map: $colores-fondo-map, $key: marron-claro);
+  height: 200px;
+  display: grid;
+  grid-template-columns: repeat(7, auto);
+  align-items: center;
+  margin-bottom: 80px;
+}
+
+.navegador {
+  grid-column: 5 / 6;
+}
+
+.lista-nav {
+  position: relative;
+  top: 30px;
+  display: inline-block;
+  font-size: 22px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding-right: 45px;
+}
+
+.animate__animated.animate__bounce {
+  animation-duration: 1.08s;
+}
+
+.enlace-nav {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+  text-decoration: none;
+  color: #333;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: -100%;
+    width: 100%;
+    height: 2.80px;
+    background: $color-enlace;
+    transition: left .8s;
   }
-  
-  .navegador {
-    grid-column: 5 / 6;
+
+  &:hover {
+    color: $color-enlace;
+
+    &:after {
+      left: 0;
+    }
   }
-  
-  .lista-nav {
-    position: relative;
-    top: 30px;
-    display: inline-block;
-    font-size: 22px;
-    font-family:Arial, Helvetica, sans-serif;
-    padding-right: 45px;
-  }
-  
-  .animate__animated.animate__bounce {
-    animation-duration: 1.08s;
-  }
-  
-  .enlace-nav {
-    position: relative;
-    overflow: hidden;
-    display: inline-block;
-    text-decoration: none;
-    color: #333;
-  
-      &::after {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: -100%;
-        width: 100%;
-        height: 2.80px;
-        background: $color-enlace;
-        transition: left .8s;
-      }
-  
-      &:hover {
-        color: $color-enlace;
-  
-        &:after {
-          left: 0;
-        }
-      }
-  }
-  
-  
-  .contenedor-imagen-logo {
-    grid-column: 2/3;
-  }
-  
-  .logo {
-    height: 160px;
-    width: 250px;
-    border-radius: 50px;
-  }
+}
+
+
+.contenedor-imagen-logo {
+  grid-column: 2/3;
+}
+
+.logo {
+  height: 160px;
+  width: 250px;
+  border-radius: 50px;
+}
+// Fin de los estilos para los Headers".
