--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,5 +1,7 @@
+// tipografia de titulos.
 $tipografia-titulo: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
+// mapa de coleres para fondos.
 $colores-fondo-map: (
     'marron-claro': rgba(233, 216, 195, 0.9960784314),
     'violetita': #a8428c,
