--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .cabezera {
   grid-area: header;
   background-color: rgba(233, 216, 195, 0.9960784314);
@@ -40,11 +46,11 @@
   left: -100%;
   width: 100%;
   height: 2.8px;
-  background: salmon;
+  background: #FF8D29;
   transition: left 0.8s;
 }
 .enlace-nav:hover {
-  color: salmon;
+  color: #FF8D29;
 }
 .enlace-nav:hover:after {
   left: 0;
@@ -58,60 +64,6 @@
   height: 160px;
   width: 250px;
   border-radius: 50px;
-}
-
-.fin {
-  grid-area: footer;
-  background-color: #a8428c;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  height: 200px;
-  align-items: center;
-  justify-items: center;
-}
-
-.logoFin {
-  height: 140px;
-  width: 200px;
-  border-radius: 40px;
-  grid-column: 1/2;
-}
-
-.listaFin {
-  left: 380px;
-  bottom: 10px;
-  list-style: none;
-  grid-column: 2/3;
-}
-
-.liFooter {
-  font-size: 18px;
-  font-family: Georgia, "Times New Roman", Times, serif;
-}
-
-.aFin {
-  color: white;
-  text-decoration: none;
-}
-.aFin:hover {
-  color: black;
-}
-
-.info {
-  grid-column: 3/4;
-}
-
-.pFooter {
-  color: white;
-  padding-bottom: 4px;
-  font-size: 18px;
-  font-family: Georgia, "Times New Roman", Times, serif;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
 }
 
 .container-grid {
@@ -147,15 +99,15 @@
 }
 
 .contenedor-mensaje {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   height: 400px;
   background-image: url("../assets/imagenes/imagen-2.jpg");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
   border: solid burlywood;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .mensaje {
@@ -183,6 +135,7 @@
   grid-area: imagen;
   height: 400px;
   padding-right: 19px;
+  max-width: 100%;
 }
 
 .contenedor-info {
@@ -220,46 +173,36 @@
   height: 500px;
 }
 
-.grupo-de-servicios {
-  margin-top: 40px;
-  background-color: rgba(225, 219, 219, 0.421);
-  height: auto;
-  display: grid;
-  grid-template-areas: "imagenservicios servicios";
-  justify-content: space-around;
-  margin-bottom: 30px;
-}
-
-.contenedor-servicios {
-  text-align: center;
-  grid-area: servicios;
-}
-
-.imagen-izquierda {
-  height: 500px;
-  grid-area: imagenservicios;
+.imagen-perro {
+  display: none;
+  height: 345px;
+  max-width: 100%;
   margin: auto;
-  width: 600px;
-}
-
-#servicios {
-  font-size: 40px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 #especialidades {
-  font-size: 20px;
+  font-size: 27px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  margin-top: 15px;
 }
 
-table {
-  width: 700px;
+.contenedor-servicios {
+  margin-top: 40px;
+  background-color: rgba(225, 219, 219, 0.421);
+  margin-bottom: 30px;
+  text-align: center;
+}
+.contenedor-servicios div {
+  display: flex;
+  justify-content: center;
+  min-width: 100%;
+}
+.contenedor-servicios div table {
+  width: 1300px;
   height: 400px;
 }
-table td {
+.contenedor-servicios div table td {
   border: solid rgba(215, 168, 110, 0.3764705882);
-  font-size: 20px;
+  font-size: 22px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
@@ -410,13 +353,12 @@ table td {
   padding: 12px;
 }
 
-#contactos, .cont-titulo h1, #nosotros, #galeria {
+#contactos, .cont-titulo h1, #nosotros, #servicios, #galeria {
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 46px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  margin-bottom: 30px;
   font-weight: 400;
 }
 
@@ -435,204 +377,199 @@ table td {
   text-align: center;
 }
 
+.map-responsive {
+  overflow: hidden;
+}
+
 .mensaje-conozcanos {
   width: 100%;
   background: transparent;
   font-size: 29px;
 }
 
-@media screen and (max-width: 400px) {
+.fin {
+  grid-area: footer;
+  background-color: #a8428c;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  height: 200px;
+  align-items: center;
+  justify-items: center;
+}
+
+.logoFin {
+  height: 140px;
+  width: 200px;
+  border-radius: 40px;
+  grid-column: 1/2;
+}
+
+.listaFin {
+  bottom: 10px;
+  list-style: none;
+  grid-column: 2/3;
+  padding: 0px;
+}
+
+.liFooter {
+  font-size: 18px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+.aFin {
+  color: white;
+  text-decoration: none;
+}
+.aFin:hover {
+  color: black;
+}
+
+.info {
+  grid-column: 3/4;
+}
+
+.pFooter {
+  color: white;
+  padding-bottom: 4px;
+  font-size: 18px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+@media screen and (max-width: 565px) {
   .cabezera {
     height: 280px;
   }
-
   .contenedor-imagen-logo {
     grid-row: 1;
     grid-column: 1/8;
-    display: flex;
-    justify-content: center;
+    text-align: center;
   }
-
   .navegador {
     grid-row: 2;
     grid-column: 1/7;
     display: flex;
     justify-content: center;
   }
-
   .logo {
     height: 100px;
     width: 170px;
   }
-
   .lista-nav {
-    font-size: 16px;
+    font-size: 17px;
     font-family: Arial, Helvetica, sans-serif;
     top: 0;
     padding-right: 3px;
   }
-
   .cont-titulo {
-    justify-content: center;
     background-color: #e9fdfd;
     margin-bottom: 50px;
     padding: 50px;
     border-radius: 20px;
   }
-
+  .cont-titulo h1 {
+    grid-column: 1/3;
+    right: 0px;
+    font-size: 30px;
+    margin: 0px;
+    text-align: center;
+  }
   .imagenInicial {
     display: none;
   }
-
-  .cont-titulo h1 {
-    padding: auto;
-    right: 0;
-    font-size: 30px;
+  .contenedor-calidad {
+    margin-top: 100px;
+    height: 150px;
     text-align: center;
   }
-
-  .contenedor-calidad {
-    display: flex;
-    margin-bottom: 20px;
-    height: 150px;
-    align-items: center;
-  }
-
   .calidad {
     display: block;
-    font-size: 19px;
-    text-align: center;
+    font-size: 22px;
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
     color: #e2aea6;
     height: 200px;
-    display: flex;
-    align-items: center;
   }
-
   .contenedor-mensaje {
     max-width: 100%;
     height: 170px;
   }
-
   .mensaje {
-    font-size: 18px;
+    font-size: 22px;
   }
-
   .fin {
     display: flex;
     flex-direction: column;
     height: 380px;
     justify-content: center;
   }
-
   .logoFin {
     width: 150px;
     height: 80px;
   }
-
   .aFin {
     color: black;
     border-top: solid white;
   }
-
   .liFooter {
-    font-size: 13px;
+    font-size: 14px;
     display: inline-block;
     padding-right: 10px;
     margin-top: 30px;
     margin-bottom: 40px;
   }
-
   .info {
     border: solid white;
     padding: 3px;
   }
-
   .pFooter {
     text-align: center;
     font-size: 13px;
   }
-
   .imagen-nosotros {
-    max-width: 100%;
     height: 250px;
     padding-right: 0;
     margin: auto;
   }
-
   .contenedor-info {
     margin-top: 40px;
     text-align: justify;
   }
-
   .informacion {
     font-size: 20px;
   }
-
   #nosotros {
     margin-top: 11px;
-    font-size: 30px;
     padding-bottom: 10px;
   }
-
   .contenedor-nosotros {
     grid-template-areas: "titulo" "imagen" "contenido";
     background-color: aliceblue;
   }
-
   .nosotros-acordeon {
     display: none;
   }
-
-  .grupo-de-servicios {
-    grid-template-areas: "imagenservicios" "servicios";
+  .imagen-perro {
+    display: block;
   }
-
-  .imagen-izquierda {
-    height: 250px;
-    width: 250px;
-    margin-bottom: 10px;
-  }
-
   #servicios {
-    font-size: 26px;
+    font-size: 30px;
   }
-
-  .contenedor-servicios table {
-    height: 300px;
-    width: 100%;
-  }
-  .contenedor-servicios table td {
-    font-size: 12px;
-  }
-
   #especialidades {
+    font-size: 22px;
+  }
+  .contenedor-servicios div table td {
     font-size: 18px;
   }
-
   .imagenDeFondo {
     display: none;
   }
-
-  #galeria {
-    font-size: 35px;
+  #contactos, .cont-titulo h1, #nosotros, #servicios, #galeria {
+    font-size: 30px;
   }
-
-  #contactos, .cont-titulo h1, #nosotros, #galeria {
-    font-size: 35px;
-  }
-
   .form-img {
     min-width: 100%;
     justify-content: center;
   }
-
   .mensaje-conozcanos {
     font-size: 20px;
-  }
-
-  .contenedor-iframe {
-    height: 300px;
-    width: 100%;
   }
 }/*# sourceMappingURL=style.css.map */
