--- a/css/style.scss
+++ b/css/style.scss
@@ -1,552 +1,18 @@
-@import "variables";
-@import "mixins";
-@import "header";
-@import "footer";
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-.container-grid {
-  display: grid;
-  grid-template-areas: 'header'
-    'contenido'
-    'footer';
-  gap: 5px;
-}
 
-.contenido-inicio {
-  grid-area: contenido;
-  margin-bottom: 100px;
-}
-
-.cont-titulo {
-  display: grid;
-  grid-template-columns: auto auto;
-  margin-bottom: 80px;
-
-  h1 {
-    @extend #contactos;
-    position: relative;
-    right: 200px;
-    grid-column: 2 / 3;
-  }
-}
-
-.imagenInicial {
-  position: relative;
-  height: 700px;
-  right: 100px;
-}
-
-.calidad {
-  display: none;
-}
-
-.contenedor-mensaje {
-  @include centro-total;
-  height: 400px;
-  background-image: url("../assets/imagenes/imagen-2.jpg");
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border: solid burlywood;
-}
-
-.mensaje {
-  font-size: 50px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  color: white;
-}
-
-
-.contenedor-nosotros {
-  background-color: map-get($map: $colores-fondo-map, $key: gris);
-  display: grid;
-  grid-template-areas: 'titulo imagen''contenido  imagen''contenido imagen';
-  margin-bottom: 60px;
-  align-items: center;
-}
-
-#nosotros {
-  @extend #contactos;
-  margin-top: 14px;
-  grid-area: titulo;
-  border-bottom: 3px solid black;
-  letter-spacing: 2px;
-}
-
-.imagen-nosotros {
-  grid-area: imagen;
-  height: 400px;
-  padding-right: 19px;
-}
-
-.contenedor-info {
-  grid-area: contenido;
-  padding: 8%;
-  text-align: center;
-}
-
-.informacion {
-  font-size: 22px;
-  font-family: 'bill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-.nosotros-acordeon {
-  width: 50%;
-  position: relative;
-  left: 25%;
-  margin-bottom: 85px;
-  margin-top: 60px;
-}
-
-.nosotros-acordeon div button {
-  font-size: 19px;
-}
-
-.accordion-body {
-  font-size: 17px;
-}
-
-.imagenDeFondo {
-  margin-top: 200px;
-  background-image: url("../assets/imagenes/servicios.jpg");
-  background-size: contain;
-  background-repeat: no-repeat;
-  height: 500px;
-}
-
-.grupo-de-servicios {
-  margin-top: 40px;
-  background-color: map-get($map: $colores-fondo-map, $key: gris);
-  height: auto;
-  display: grid;
-  grid-template-areas: 'imagenservicios servicios';
-  justify-content: space-around;
-  margin-bottom: 30px;
-}
-
-.contenedor-servicios {
-  text-align: center;
-  grid-area: servicios;
-}
-
-.imagen-izquierda {
-  height: 500px;
-  grid-area: imagenservicios;
-  margin: auto;
-  width: 600px;
-}
-
-#servicios {
-  font-size: 40px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-#especialidades {
-  font-size: 20px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  margin-top: 15px;
-}
-
-table {
-  width: 700px;
-  height: 400px;
-
-  td {
-    border: solid #d7a86e60;
-    font-size: 20px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  }
-
-}
-
-.color-tabla {
-  background-color: map-get($map: $colores-fondo-map, $key: gris);
-}
-
-
-
-#galeria {
-  @extend #contactos;
-}
-
-.linea {
-  background: #550b51;
-  height: 5px;
-  width: 100%;
-  display: block;
-}
-
-.galeria-fotos {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  width: 95%;
-  margin: auto;
-  grid-gap: 10px;
-  padding: 40px 0;
-  overflow: hidden;
-}
-
-.galeria-fotos>a {
-  display: block;
-  position: relative;
-  overflow: hidden;
-  box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
-}
-
-.imagen-galeria {
-  width: 100%;
-  vertical-align: top;
-  height: 300px;
-  object-fit: cover;
-  transition: transform 0.5s;
-}
-
-.galeria-fotos a:hover img {
-  filter: blur(2px);
-  transform: rotate(10deg) scale(1.3);
-}
-
-.light-box {
-  position: fixed;
-  top: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.5);
-  transition: transform .3s ease-in-out;
-  width: 100%;
-  height: 100vh;
-  z-index: 1000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transform: scale(0);
-}
-
-.light-box img {
-  width: 75vw;
-  max-height: 72vh;
-}
-
-.light-box:target {
-  transform: scale(1);
-}
-
-.close {
-  display: block;
-  position: absolute;
-  top: 40px;
-  right: 40px;
-  background: black;
-  color: #fff;
-  text-decoration: none;
-  width: 40px;
-  height: 40px;
-  text-align: center;
-  line-height: 40px;
-  border-radius: 50%;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.next {
-  display: block;
-  background: black;
-  color: #fff;
-  height: 30px;
-  width: 30px;
-  line-height: 30px;
-  text-decoration: none;
-  text-align: center;
-}
-
-.flex-conteiner {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  justify-content: center;
-  background: map-get($map: $colores-fondo-map, $key: rosita);
-  margin-bottom: 80px;
-}
-
-.form {
-  width: 100%;
-  flex: 1;
-  padding: 30px;
-}
-
-.form__input {
-  padding: 7px;
-  margin: 6px 0;
-  width: 100%;
-  border: none;
-  border-bottom: 3px solid #E3BEC6;
-  background: transparent;
-  color: #fff;
-  font-size: 18px;
-}
-
-.form__input:focus {
-  background: #333;
-  outline: none;
-}
-
-
-.form-img {
-  flex: 1;
-  padding: 10px;
-  display: flex;
-}
-
-.form-img img {
-  width: 80%;
-  border-radius: 50%;
-  background-color: #fff;
-}
-
-.form textarea {
-  min-height: 140px;
-  resize: none;
-}
-
-.form input[type="submit"] {
-  background-color: #E3BEC6;
-  border-bottom: none;
-  padding: 12px;
-}
-
-#contactos {
-  @include centro-total;
-  font-size: 46px;
-  font-family: $tipografia-titulo;
-  margin-bottom: 30px;
-  font-weight: 400;
-}
-
-.contenedor-conozcanos {
-  @include centro-total;
-  flex-wrap: wrap;
-  padding: 50px 50px;
-  background: map-get($map: $colores-fondo-map, $key: gris);
-  margin-bottom: 40px;
-}
-
-.contenedor-mensaje-conozcanos {
-  flex: 1;
-  text-align: center;
-}
-
-.mensaje-conozcanos {
-  width: 100%;
-  background: transparent;
-  font-size: 29px;
-}
-
-@media screen and (max-width: 400px) {
-  .cabezera {
-    height: 280px;
-  }
-
-  .contenedor-imagen-logo {
-    grid-row: 1;
-    grid-column: 1/8;
-    display: flex;
-    justify-content: center;
-  }
-
-  .navegador {
-    grid-row: 2;
-    grid-column: 1/7;
-    display: flex;
-    justify-content: center;
-  }
-
-  .logo {
-    height: 100px;
-    width: 170px;
-  }
-
-  .lista-nav {
-    font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
-    top: 0;
-    padding-right: 3px;
-  }
-
-  .cont-titulo {
-    justify-content: center;
-    background-color: #e9fdfd;
-    margin-bottom: 50px;
-    padding: 50px;
-    border-radius: 20px;
-  }
-
-  .imagenInicial {
-    display: none;
-  }
-
-  .cont-titulo h1 {
-    padding: auto;
-    right: 0;
-    font-size: 30px;
-    text-align: center;
-  }
-
-  .contenedor-calidad {
-    display: flex;
-    margin-bottom: 20px;
-    height: 150px;
-    align-items: center;
-  }
-
-  .calidad {
-    display: block;
-    font-size: 19px;
-    text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: #e2aea6;
-    height: 200px;
-    display: flex;
-    align-items: center;
-  }
-
-  .contenedor-mensaje {
-    max-width: 100%;
-    height: 170px;
-  }
-
-  .mensaje {
-    font-size: 18px;
-  }
-
-
-
-  .fin {
-    display: flex;
-    flex-direction: column;
-    height: 380px;
-    justify-content: center;
-  }
-
-  .logoFin {
-    width: 150px;
-    height: 80px;
-  }
-
-  .aFin {
-    color: black;
-    border-top: solid white;
-  }
-
-  .liFooter {
-    font-size: 13px;
-    display: inline-block;
-    padding-right: 10px;
-    margin-top: 30px;
-    margin-bottom: 40px;
-  }
-
-  .info {
-    border: solid white;
-    padding: 3px;
-  }
-
-  .pFooter {
-    text-align: center;
-    font-size: 13px;
-  }
-
-  .imagen-nosotros {
-    max-width: 100%;
-    height: 250px;
-    padding-right: 0;
-    margin: auto;
-  }
-
-
-  .contenedor-info {
-    margin-top: 40px;
-    text-align: justify;
-  }
-
-  .informacion {
-    font-size: 20px;
-  }
-
-  #nosotros {
-    margin-top: 11px;
-    font-size: 30px;
-    padding-bottom: 10px;
-  }
-
-  .contenedor-nosotros {
-    grid-template-areas: 'titulo''imagen''contenido';
-    background-color: aliceblue;
-  }
-
-  .nosotros-acordeon {
-    display: none;
-  }
-
-  .grupo-de-servicios {
-    grid-template-areas: 'imagenservicios''servicios';
-  }
-
-  .imagen-izquierda {
-    height: 250px;
-    width: 250px;
-    margin-bottom: 10px;
-  }
-
-  #servicios {
-    font-size: 26px;
-  }
-
-  .contenedor-servicios {
-    table{
-      height: 300px;
-      width: 100%;
-      
-      td{
-        font-size: 12px;
-      }
-    }
-  }
-
-  #especialidades {
-    font-size: 18px;
-  }
-
-
-  .imagenDeFondo {
-    display: none;
-  }
-
-  #galeria {
-    font-size: 35px;
-  }
-
-  #contactos {
-    font-size: 35px;
-  }
-
-
-  
-  .form-img{
-    min-width: 100%;
-    justify-content: center;
-  }
-
-
-  .mensaje-conozcanos{
-    font-size: 20px;
-  }
-
-  .contenedor-iframe{
-    height: 300px;
-    width: 100%;
-  }
-
-}
+// imports
+@import "variables";
+@import "mixins";
+@import "header";
+@import "inicio";
+@import "nosotros";
+@import "servicios";
+@import "galeria";
+@import "contactos";
+@import "footer";
+@import "media";
